--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,19 @@
-FROM python:3.10-slim
+FROM python:3.11-slim
 
 WORKDIR /app
+
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    git \
+    && rm -rf /var/lib/apt/lists/*
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
+# Expose FastAPI port
 EXPOSE 8000
 
+# Run the server
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
