--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,44 +1,33 @@
-# FROM python:3.11-slim-bookworm
 
+# FROM python:3.11-slim AS builder
 
 # WORKDIR /app
 
-# # Install system dependencies
-# RUN apt-get update && apt-get install -y \
-#     git \
-#     && rm -rf /var/lib/apt/lists/*
+# RUN apt-get update && apt-get install -y gcc g++ && rm -rf /var/lib/apt/lists/*
 
 # COPY requirements.txt .
-# RUN pip install --no-cache-dir -r requirements.txt
+# RUN pip install --no-cache-dir --prefix=/install -r requirements.txt
+
+
+# # Stage 2: Final lightweight image
+# FROM python:3.11-slim
+
+# WORKDIR /app
+
+# COPY --from=builder /install /usr/local
 
 # COPY . .
 
-# # Expose FastAPI port
 # EXPOSE 8000
 
-# # Run the server
 # CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
 
-# Stage 1: Install dependencies
-FROM python:3.11-slim AS builder
-
-WORKDIR /app
-
-RUN apt-get update && apt-get install -y gcc g++ && rm -rf /var/lib/apt/lists/*
-
-COPY requirements.txt .
-RUN pip install --no-cache-dir --prefix=/install -r requirements.txt
-
-
-# Stage 2: Final lightweight image
 FROM python:3.11-slim
 
 WORKDIR /app
-
-COPY --from=builder /install /usr/local
+COPY requirements.txt .
+RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
-
 EXPOSE 8000
-
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["python", "backend_app.py"]
