--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -9,5 +9,5 @@ COPY . .
 
 EXPOSE 8501
 
-CMD ["streamlit", "run", "frontend.py", "--server.port=8501", "--server.address=0.0.0.0"]
+CMD ["streamlit", "run", "frontend_app.py", "--server.port=8501", "--server.address=0.0.0.0"]
 
