--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,33 +1,27 @@
-
-# FROM python:3.11-slim AS builder
-
-# WORKDIR /app
-
-# RUN apt-get update && apt-get install -y gcc g++ && rm -rf /var/lib/apt/lists/*
-
-# COPY requirements.txt .
-# RUN pip install --no-cache-dir --prefix=/install -r requirements.txt
-
-
-# # Stage 2: Final lightweight image
-# FROM python:3.11-slim
-
-# WORKDIR /app
-
-# COPY --from=builder /install /usr/local
-
-# COPY . .
-
-# EXPOSE 8000
-
-# CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
-
 FROM python:3.11-slim
 
 WORKDIR /app
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
 
+# Install system deps
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential git && \
+    rm -rf /var/lib/apt/lists/*
+
+# Copy requirements first for caching
+COPY requirements.txt .
+
+# Install python dependencies
+RUN pip install --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
+
+# Copy backend source
 COPY . .
+
+# Ensure local modules import correctly
+ENV PYTHONPATH=/app
+
+# FastAPI will run on port 8000
 EXPOSE 8000
-CMD ["python", "backend_app.py"]
+
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+
