--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,26 +2,22 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Install system deps
+# Install deps (this layer is cached)
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential git && \
     rm -rf /var/lib/apt/lists/*
 
-# Copy requirements first for caching
+# Copy requirements separately for caching
 COPY requirements.txt .
 
-# Install python dependencies
 RUN pip install --upgrade pip && \
     pip install --no-cache-dir -r requirements.txt
 
-# Copy backend source
+# Copy code
 COPY . .
 
-# Ensure local modules import correctly
 ENV PYTHONPATH=/app
 
-# FastAPI will run on port 8000
 EXPOSE 8000
 
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
-
