--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -1,7 +1,31 @@
+# apiVersion: apps/v1
+# kind: Deployment
+# metadata:
+#   name: rag-frontend
+# spec:
+#   replicas: 1
+#   selector:
+#     matchLabels:
+#       app: rag-frontend
+#   template:
+#     metadata:
+#       labels:
+#         app: rag-frontend
+#     spec:
+#       containers:
+#         - name: rag-frontend
+#           image: "mrvandana1/rag-frontend:latest"   # fallback only
+#           ports:
+#             - containerPort: 8501
+#           env:
+#             - name: BACKEND_URL
+#               value: "http://rag-backend:8000/query"
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: rag-frontend
+  labels:
+    app: rag-frontend
 spec:
   replicas: 1
   selector:
@@ -12,11 +36,34 @@ spec:
       labels:
         app: rag-frontend
     spec:
+      terminationGracePeriodSeconds: 20
       containers:
         - name: rag-frontend
-          image: saketh479/rag-frontend:latest
+          image: "mrvandana1/rag-frontend:latest"
           ports:
             - containerPort: 8501
           env:
             - name: BACKEND_URL
               value: "http://rag-backend:8000/query"
+          resources:
+            requests:
+              cpu: "200m"
+              memory: "256Mi"
+            limits:
+              cpu: "1000m"
+              memory: "1Gi"
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 8501
+            initialDelaySeconds: 3
+            periodSeconds: 5
+            timeoutSeconds: 3
+            failureThreshold: 3
+          livenessProbe:
+            httpGet:
+              path: /
+              port: 8501
+            initialDelaySeconds: 30
+            periodSeconds: 20
+            timeoutSeconds: 3
