--- a/k8s/services.yaml
+++ b/k8s/services.yaml
@@ -1,3 +1,25 @@
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: rag-backend
+# spec:
+#   selector:
+#     app: rag-backend
+#   ports:
+#     - port: 8000
+#       targetPort: 8000
+
+# ---
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: rag-frontend
+# spec:
+#   selector:
+#     app: rag-frontend
+#   ports:
+#     - port: 8501
+#       targetPort: 8501
 apiVersion: v1
 kind: Service
 metadata:
@@ -8,7 +30,6 @@ spec:
   ports:
     - port: 8000
       targetPort: 8000
-
 ---
 apiVersion: v1
 kind: Service
