--- a/ansible/deploy_update_k8s.yml
+++ b/ansible/deploy_update_k8s.yml
@@ -1,51 +1,5 @@
-# ---
-# - name: Update Kubernetes Deployments with new images (local)
-#   hosts: local
-#   gather_facts: no
-#   vars:
-#     # passed from Jenkins via --extra-vars
-#     backend_image: ""
-#     frontend_image: ""
-#     k8s_manifest_dir: "{{ playbook_dir }}/../k8s"
-
-#   tasks:
-#     - name: Ensure environment has kubectl (debug)
-#       command: kubectl version --client --short
-#       register: kubectl_ver
-#       failed_when: kubectl_ver.rc != 0
-#       changed_when: false
-
-#     - name: Set backend image on deployment rag-backend
-#       command: >
-#         kubectl set image deployment/rag-backend rag-backend={{ backend_image }} --namespace=default
-#       register: set_backend
-#       ignore_errors: false
-
-#     - name: Set frontend image on deployment rag-frontend
-#       command: >
-#         kubectl set image deployment/rag-frontend rag-frontend={{ frontend_image }} --namespace=default
-#       register: set_frontend
-#       ignore_errors: false
-
-#     - name: Wait for backend rollout
-#       command: kubectl rollout status deployment/rag-backend --namespace=default --timeout=120s
-#       register: rollout_backend
-#       failed_when: rollout_backend.rc != 0
-
-#     - name: Wait for frontend rollout
-#       command: kubectl rollout status deployment/rag-frontend --namespace=default --timeout=120s
-#       register: rollout_frontend
-#       failed_when: rollout_frontend.rc != 0
-
-#     - name: (Optional) Re-apply k8s manifests from repo (if you changed manifests)
-#       command: kubectl apply -f {{ k8s_manifest_dir }}/
-#       register: apply_manifests
-#       changed_when: "'configured' in apply_manifests.stdout or 'unchanged' not in apply_manifests.stdout"
-#       ignore_errors: true
-
-
 ---
-- name: Update Kubernetes Deployments with new images (TAR Load Method)
+- name: "Update Kubernetes Deployments with new images (TAR Load Method)"
   hosts: local
   gather_facts: no
 
@@ -56,83 +10,86 @@
     k8s_manifest_dir: "{{ playbook_dir }}/../k8s"
 
   tasks:
-    - name: Ensure temp directory exists
+
+    - name: "Ensure temp directory exists"
       file:
         path: "{{ tmp_dir }}"
         state: directory
         mode: '0755'
 
-    - name: Save BACKEND image to tar
+    - name: "Save BACKEND image to tar"
       command: docker save {{ backend_image }} -o {{ tmp_dir }}/backend.tar
       register: save_backend
       failed_when: save_backend.rc != 0
 
-    - name: Gzip backend tar
+    - name: "Gzip backend tar"
       command: gzip -f {{ tmp_dir }}/backend.tar
       register: gzip_backend
       failed_when: gzip_backend.rc != 0
 
-    - name: Try loading gzipped backend tar into Minikube
+    - name: "Try loading gzipped backend tar into Minikube"
       command: minikube image load {{ tmp_dir }}/backend.tar.gz
       register: backend_load
       ignore_errors: true
 
-    - name: Fallback: Gunzip and load raw backend tar
+    - name: "Fallback: Gunzip and load raw backend tar"
       when: backend_load.rc != 0
       block:
-        - name: Unzip backend tar
+
+        - name: "Unzip backend tar"
           command: gunzip -f {{ tmp_dir }}/backend.tar.gz
 
-        - name: Load backend image into minikube (raw tar)
+        - name: "Load backend image into minikube (raw tar)"
           command: minikube image load {{ tmp_dir }}/backend.tar
           register: backend_load_raw
           failed_when: backend_load_raw.rc != 0
 
-    - name: Save FRONTEND image to tar
+    - name: "Save FRONTEND image to tar"
       command: docker save {{ frontend_image }} -o {{ tmp_dir }}/frontend.tar
       register: save_frontend
       failed_when: save_frontend.rc != 0
 
-    - name: Gzip frontend tar
+    - name: "Gzip frontend tar"
       command: gzip -f {{ tmp_dir }}/frontend.tar
       register: gzip_frontend
       failed_when: gzip_frontend.rc != 0
 
-    - name: Try loading gzipped frontend tar into Minikube
+    - name: "Try loading gzipped frontend tar into Minikube"
       command: minikube image load {{ tmp_dir }}/frontend.tar.gz
       register: frontend_load
       ignore_errors: true
 
-    - name: Fallback: Gunzip and load raw frontend tar
+    - name: "Fallback: Gunzip and load raw frontend tar"
       when: frontend_load.rc != 0
       block:
-        - name: Unzip frontend tar
+
+        - name: "Unzip frontend tar"
           command: gunzip -f {{ tmp_dir }}/frontend.tar.gz
 
-        - name: Load frontend image into minikube (raw tar)
+        - name: "Load frontend image into minikube (raw tar)"
           command: minikube image load {{ tmp_dir }}/frontend.tar
           register: frontend_load_raw
           failed_when: frontend_load_raw.rc != 0
 
-    - name: Cleanup temp tars
+    - name: "Cleanup temp tars"
       shell: rm -f {{ tmp_dir }}/*.tar {{ tmp_dir }}/*.tar.gz || true
 
-    - name: Update backend deployment with new image
+    - name: "Update backend deployment with new image"
       command: >
         kubectl set image deployment/rag-backend rag-backend={{ backend_image }} --namespace=default
       register: update_backend
 
-    - name: Wait for backend rollout
+    - name: "Wait for backend rollout"
       command: kubectl rollout status deployment/rag-backend --timeout=300s
       register: rollout_backend
       failed_when: rollout_backend.rc != 0
 
-    - name: Update frontend deployment with new image
+    - name: "Update frontend deployment with new image"
       command: >
         kubectl set image deployment/rag-frontend rag-frontend={{ frontend_image }} --namespace=default
       register: update_frontend
 
-    - name: Wait for frontend rollout
+    - name: "Wait for frontend rollout"
       command: kubectl rollout status deployment/rag-frontend --timeout=180s
       register: rollout_frontend
       failed_when: rollout_frontend.rc != 0
