--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -14,7 +14,6 @@ spec:
     spec:
       containers:
         - name: rag-backend
-          image: rag-backend:latest   # Local image inside Minikube
-          imagePullPolicy: Never      # IMPORTANT for Minikube local builds
+          image: rag-backend:latest   # LOCAL image inside Minikube
           ports:
             - containerPort: 8000
