--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -1,9 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: rag-ingress
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+  name: app-ingress
 spec:
   ingressClassName: nginx
   rules:
