--- a/ansible/playbook-k8.yml
+++ b/ansible/playbook-k8.yml
@@ -2,4 +2,4 @@
   hosts: all
   tasks:
     - name: Apply all manifests
-      shell: kubectl apply -f {{ playbook_dir }}/../k8s/
+      shell: /snap/bin/kubectl apply -f {{ playbook_dir }}/../k8s/
