--- a/k8s/backend-deployment.yaml
+++ b/k8s/backend-deployment.yaml
@@ -14,6 +14,7 @@ spec:
     spec:
       containers:
         - name: rag-backend
-          image: rag-backend:latest   # LOCAL image inside Minikube
+          image: mrvandana1/rag-backend:latest
+          imagePullPolicy: Never
           ports:
             - containerPort: 8000
