--- a/k8s/backend-secret.yaml
+++ b/k8s/backend-secret.yaml
@@ -4,4 +4,4 @@ metadata:
   name: backend-secret
 type: Opaque
 data:
-  API_KEY: c2FtcGxlX2FwaV9rZXk=   # "sample_api_key" -> base64 encoded
+  API_KEY: c2FtcGxlX2FwaV9rZXk=
