--- a/ansible/playbook-k8.yml
+++ b/ansible/playbook-k8.yml
@@ -1,5 +1,11 @@
 - name: Deploy to K8s
   hosts: all
   tasks:
-    - name: Apply all manifests
-      shell: /snap/bin/kubectl apply -f {{ playbook_dir }}/../k8s/
+
+    - name: Update backend image tag
+      shell: |
+        /snap/bin/kubectl set image deployment/rag-backend rag-backend=mrvandana1/rag-backend:{{ image_tag }}
+
+    - name: Update frontend image tag
+      shell: |
+        /snap/bin/kubectl set image deployment/rag-frontend rag-frontend=mrvandana1/rag-frontend:{{ image_tag }}
