--- a/elk/filebeat-config.yaml
+++ b/elk/filebeat-config.yaml
@@ -6,12 +6,28 @@ metadata:
 data:
   filebeat.yml: |
     filebeat.inputs:
-      - type: container
-        paths:
-          - /var/log/containers/*.log
+    - type: filestream
+      id: kubernetes-logs
+      paths:
+        - /var/log/containers/*.log
+      parsers:
+        - container: ~
+      prospector.scanner.symlinks: true
 
     processors:
-      - add_kubernetes_metadata: ~
+      - add_kubernetes_metadata:
+          host: ${NODE_NAME}
+          matchers:
+            - logs_path:
+                logs_path: "/var/log/containers/"
+      - drop_fields:
+          fields: ["agent.ephemeral_id", "agent.id", "ecs.version"]
+          ignore_missing: true
 
-    output.logstash:
-      hosts: ["logstash:5044"]
+    output.elasticsearch:
+      hosts: ["elasticsearch:9200"]
+      index: "k8s-logs-%{+yyyy.MM.dd}"
+      
+    setup.ilm.enabled: false
+    setup.template.name: "k8s-logs"
+    setup.template.pattern: "k8s-logs-*"
