--- a/elk/filebeat-daemonset.yaml
+++ b/elk/filebeat-daemonset.yaml
@@ -6,35 +6,59 @@ metadata:
 spec:
   selector:
     matchLabels:
-      k8s-app: filebeat
+      app: filebeat
   template:
     metadata:
       labels:
-        k8s-app: filebeat
+        app: filebeat
     spec:
       serviceAccountName: filebeat
-      hostPID: true
       containers:
-        - name: filebeat
-          securityContext:
-            privileged: true
-          image: docker.elastic.co/beats/filebeat:8.8.1
-          args: ["-c", "/etc/filebeat.yml", "-e"]
-          volumeMounts:
-            - name: config
-              mountPath: /etc/filebeat.yml
-              subPath: filebeat.yml
-
-            # These paths EXIST inside the node container
-            - name: varlog
-              mountPath: /var/log
-              readOnly: true
-
-      volumes:
+      - name: filebeat
+        image: docker.elastic.co/beats/filebeat:8.8.1
+        args:
+          - "-c"
+          - "/etc/filebeat.yml"
+          - "-e"
+        env:
+        - name: NODE_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.nodeName
+        securityContext:
+          runAsUser: 0
+          privileged: true
+        resources:
+          requests:
+            memory: "100Mi"
+            cpu: "100m"
+          limits:
+            memory: "200Mi"
+            cpu: "200m"
+        volumeMounts:
         - name: config
-          configMap:
-            name: filebeat-config
-            defaultMode: 0640
-        - name: varlog
-          hostPath:
-            path: /var/log
+          mountPath: /etc/filebeat.yml
+          subPath: filebeat.yml
+          readOnly: true
+        - name: varlogcontainers
+          mountPath: /var/log/containers
+          readOnly: true
+        - name: varlogpods
+          mountPath: /var/log/pods
+          readOnly: true
+        - name: varlibdockercontainers
+          mountPath: /var/lib/docker/containers
+          readOnly: true
+      volumes:
+      - name: config
+        configMap:
+          name: filebeat-config
+      - name: varlogcontainers
+        hostPath:
+          path: /var/log/containers
+      - name: varlogpods
+        hostPath:
+          path: /var/log/pods
+      - name: varlibdockercontainers
+        hostPath:
+          path: /var/lib/docker/containers
